Fix vertical spacing for ok/cancel buttons in breakpoint edit

--- a/src/panels/debugsection.css
+++ b/src/panels/debugsection.css
@@ -145,7 +145,6 @@
 .bigger-font {
   font-size: 10pt;
   line-height: 10pt;
-  padding-top: 7px;
   text-align: center;
 }
 
